[metadata]
name = rvt_py
version = 1.0.0
author = ZRC SAZU and University of Ljubljana (UL FGG)
author_email = ziga.kokalj@zrc-sazu.si
description = Relief RVTVisualization Toolbox python library. It helps scientist visualize raster elevation model datasets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EarthObservation/RVT_py
project_urls =
    Bug Tracker = https://github.com/EarthObservation/RVT_py/issues
classifiers =
     Development Status :: 5 - Production/Stable,
	 Programming Language :: Python :: 3,
	 License :: OSI Approved :: Apache Software License,
	 Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

install_requires =
		numpy
		scipy
		gdal
		matplotlib

[options.packages.find]
where = package_dir